--- a/index.html
+++ b/index.html
@@ -35,16 +35,22 @@
         <section>
         <div class="container">
             <div class="categorias">
-                <input type="checkbox" name="categoria1" id="">
-                <label for="categoria1">Categoria1</label>
-                <input type="checkbox" name="categoria2" id="">
-                <label for="categoria2">Categoria2</label>
-                <input type="checkbox" name="categoria3" id="">
-                <label for="categoria3">Categoria3</label>
-                <input type="checkbox" name="categoria4" id="">
-                <label for="categoria4">Categoria4</label>
-                <input type="checkbox" name="categoria5" id="">
-                <label for="categoria5">Categoria5</label>
+                <div class="col">
+                    <input class="check" type="checkbox" name="categoria1" id="">
+                    <label for="categoria1">Categoria1</label>
+                    <input class="check" type="checkbox" name="categoria2" id="">
+                    <label for="categoria2">Categoria2</label>
+                    <input class="check" type="checkbox" name="categoria3" id="">
+                    <label for="categoria3">Categoria3</label>
+                </div>
+                <div class="col">
+                    <input class="check" type="checkbox" name="categoria4" id="">
+                    <label for="categoria4">Categoria4</label>
+                    <input class="check" type="checkbox" name="categoria5" id="">
+                    <label for="categoria5">Categoria5</label>
+                    <input class="check" type="checkbox" name="categoria6" id="">
+                    <label for="categoria6">Categoria6</label>
+                </div>
             </div>
             <div class="buscador">
                 <input type="text" name="buscador" id="">
@@ -53,42 +59,6 @@
             
         </div>
             <div class="container-cards">
-                <div class="card">
-                    <img src="./assets/img/Museum_Tour.jpg" alt="">
-                    <h2>Título</h2>
-                    <p>Descripción</p>
-                    <div class="extra">
-                        <p>Precio $5000</p>
-                        <a href="#">Ver más</a>
-                    </div>
-                </div>
-                <div class="card">
-                    <img src="./assets/img/Museum_Tour.jpg" alt="">
-                    <h2>Título</h2>
-                    <p>Descripción</p>
-                    <div class="extra">
-                        <p>Precio $5000</p>
-                        <a href="#">Ver más</a>
-                    </div>
-                </div>
-                <div class="card">
-                    <img src="./assets/img/Museum_Tour.jpg" alt="">
-                    <h2>Título</h2>
-                    <p>Descripción</p>
-                    <div class="extra">
-                        <p>Precio $5000</p>
-                        <a href="#">Ver más</a>
-                    </div>
-                </div>
-                <div class="card">
-                    <img src="./assets/img/Museum_Tour.jpg" alt="">
-                    <h2>Título</h2>
-                    <p>Descripción</p>
-                    <div class="extra">
-                        <p>Precio $5000</p>
-                        <a href="#">Ver más</a>
-                    </div>
-                </div>
             </div>
         </section>
         <footer>
@@ -105,7 +75,7 @@
     </main>
 
 
-    <script src="./assets/js/index.js"></script>
+    <script type="module" src="./assets/js/home.js"></script>
     <script src="https://kit.fontawesome.com/ea89dbad1b.js" crossorigin="anonymous"></script>
 </body>
 </html>
