--- a/stats.html
+++ b/stats.html
@@ -37,7 +37,7 @@
 
         <section class="container-stats">
             <table>
-                <h2>Event Statistics</h2>
+                <h2 class="h2-stats">Event Statistics</h2>
                 <tr class="tr-head">
                     <td>Events with the highest percentage of attendance</td>
                     <td>Events with the lowest percentage of attendance</td>
@@ -56,7 +56,7 @@
             </table>
 
             <table>
-                <h2>Upcoming events statistics by category</h2>
+                <h2 class="h2-stats">Upcoming events statistics by category</h2>
                 <tr class="tr-head">
                     <td>Categories</td>
                     <td>Revenues</td>
@@ -81,7 +81,7 @@
             </table>
 
             <table>
-                <h2>Past events statistics by category</h2>
+                <h2 class="h2-stats">Past events statistics by category</h2>
                 <tr class="tr-head">
                     <td>Categories</td>
                     <td>Revenues</td>
