--- a/past-events.html
+++ b/past-events.html
@@ -29,7 +29,7 @@
     <main>
         <div class="banner">
             <a href="#"><</a>
-            <h1>UPCOMING EVENTS</h1>
+            <h1>PAST EVENTS</h1>
             <a href="#">></a>
         </div>
         <section>
@@ -53,42 +53,6 @@
             
         </div>
             <div class="container-cards">
-                <div class="card">
-                    <img src="./assets/img/Museum_Tour.jpg" alt="">
-                    <h2>Título</h2>
-                    <p>Descripción</p>
-                    <div class="extra">
-                        <p>Precio $5000</p>
-                        <a href="#">Ver más</a>
-                    </div>
-                </div>
-                <div class="card">
-                    <img src="./assets/img/Museum_Tour.jpg" alt="">
-                    <h2>Título</h2>
-                    <p>Descripción</p>
-                    <div class="extra">
-                        <p>Precio $5000</p>
-                        <a href="#">Ver más</a>
-                    </div>
-                </div>
-                <div class="card">
-                    <img src="./assets/img/Museum_Tour.jpg" alt="">
-                    <h2>Título</h2>
-                    <p>Descripción</p>
-                    <div class="extra">
-                        <p>Precio $5000</p>
-                        <a href="#">Ver más</a>
-                    </div>
-                </div>
-                <div class="card">
-                    <img src="./assets/img/Museum_Tour.jpg" alt="">
-                    <h2>Título</h2>
-                    <p>Descripción</p>
-                    <div class="extra">
-                        <p>Precio $5000</p>
-                        <a href="#">Ver más</a>
-                    </div>
-                </div>
             </div>
         </section>
         <footer>
@@ -105,7 +69,7 @@
     </main>
 
 
-    <script src="./assets/js/index.js"></script>
+    <script type="module" src="./assets/js/pastEvents.js"></script>
     <script src="https://kit.fontawesome.com/ea89dbad1b.js" crossorigin="anonymous"></script>
 </body>
 </html>
