Task3 - Falta details.html

--- a/events.html
+++ b/events.html
@@ -33,26 +33,18 @@
             <a href="#">></a>
         </div>
         <section>
-        <div class="container">
-            <div class="categorias">
-                <input type="checkbox" name="categoria1" id="">
-                <label for="categoria1">Categoria1</label>
-                <input type="checkbox" name="categoria2" id="">
-                <label for="categoria2">Categoria2</label>
-                <input type="checkbox" name="categoria3" id="">
-                <label for="categoria3">Categoria3</label>
-                <input type="checkbox" name="categoria4" id="">
-                <label for="categoria4">Categoria4</label>
-                <input type="checkbox" name="categoria5" id="">
-                <label for="categoria5">Categoria5</label>
+            <div class="container">
+                <div class="categorias">
+                    <div class="col" id="category-container">
+                    </div>
+                </div>
+                <div class="buscador">
+                    <input type="text" name="buscador" id="">
+                    <button class="buscador-btn"><i class="fa-solid fa-magnifying-glass"></i></button>
+                </div>
+
             </div>
-            <div class="buscador">
-                <input type="text" name="buscador" id="">
-                <button class="buscador-btn"><i class="fa-solid fa-magnifying-glass"></i></button>
-            </div>
-            
-        </div>
-            <div class="container-cards">
+            <div class="container-cards-upcoming">
             </div>
         </section>
         <footer>
