--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -15,6 +16,7 @@
     <link rel="stylesheet" href="https://kit.fontawesome.com/ea89dbad1b.css" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/styles/styles.css">
 </head>
+
 <body>
     <header>
         <img src="./assets/img/Logo Amazing Events.png" alt="Logo Amazing Events" class="logo-amazing">
@@ -29,35 +31,21 @@
     <main>
         <div class="banner">
             <a href="#"><</a>
-            <h1>HOME</h1>
-            <a href="#">></a>
+                <h1>HOME</h1>
+                <a href="#">></a>
         </div>
         <section>
-        <div class="container">
-            <div class="categorias">
-                <div class="col">
-                    <input class="check" type="checkbox" name="categoria1" id="">
-                    <label for="categoria1">Categoria1</label>
-                    <input class="check" type="checkbox" name="categoria2" id="">
-                    <label for="categoria2">Categoria2</label>
-                    <input class="check" type="checkbox" name="categoria3" id="">
-                    <label for="categoria3">Categoria3</label>
+            <div class="container">
+                <div class="categorias">
+                    <div class="col" id="category-container">
+                    </div>
                 </div>
-                <div class="col">
-                    <input class="check" type="checkbox" name="categoria4" id="">
-                    <label for="categoria4">Categoria4</label>
-                    <input class="check" type="checkbox" name="categoria5" id="">
-                    <label for="categoria5">Categoria5</label>
-                    <input class="check" type="checkbox" name="categoria6" id="">
-                    <label for="categoria6">Categoria6</label>
+                <div class="buscador">
+                    <input type="text" name="buscador" id="search-input">
+                    <button class="buscador-btn"><i class="fa-solid fa-magnifying-glass"></i></button>
                 </div>
+
             </div>
-            <div class="buscador">
-                <input type="text" name="buscador" id="">
-                <button class="buscador-btn"><i class="fa-solid fa-magnifying-glass"></i></button>
-            </div>
-            
-        </div>
             <div class="container-cards">
             </div>
         </section>
@@ -68,7 +56,7 @@
                 <a href="#"><i class="fa-brands fa-whatsapp"></i></a>
             </div>
 
-                <p class="footer-text">Cohort</p>
+            <p class="footer-text">Cohort</p>
 
         </footer>
 
@@ -78,4 +66,5 @@
     <script type="module" src="./assets/js/home.js"></script>
     <script src="https://kit.fontawesome.com/ea89dbad1b.js" crossorigin="anonymous"></script>
 </body>
+
 </html>
