--- a/events.html
+++ b/events.html
@@ -39,7 +39,7 @@
                     </div>
                 </div>
                 <div class="buscador">
-                    <input type="text" name="buscador" id="">
+                    <input type="text" name="buscador" id="search-input-upcoming">
                     <button class="buscador-btn"><i class="fa-solid fa-magnifying-glass"></i></button>
                 </div>
 
