--- a/stats.html
+++ b/stats.html
@@ -34,86 +34,7 @@
             <h1>STATS</h1>
             <a href="#">></a>
         </div>
-
-        <section class="container-stats">
-            <table>
-                <h2 class="h2-stats">Event Statistics</h2>
-                <tr class="tr-head">
-                    <td>Events with the highest percentage of attendance</td>
-                    <td>Events with the lowest percentage of attendance</td>
-                    <td>Events with larger capacity</td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-            </table>
-
-            <table>
-                <h2 class="h2-stats">Upcoming events statistics by category</h2>
-                <tr class="tr-head">
-                    <td>Categories</td>
-                    <td>Revenues</td>
-                    <td>Percentage of attendance</td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-
-                </tr>
-                <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-            </table>
-
-            <table>
-                <h2 class="h2-stats">Past events statistics by category</h2>
-                <tr class="tr-head">
-                    <td>Categories</td>
-                    <td>Revenues</td>
-                    <td>Percentage of attendance</td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-            </table>
-        </section>
+        <div id="table-stats"></div>
         <footer>
             <div class="social">
                 <a href="#"><i class="fa-brands fa-instagram"></i></a>
@@ -128,7 +49,7 @@
     </main>
 
 
-    <script src="./assets/js/index.js"></script>
+    <script src="./assets/js/stats.js"></script>
     <script src="https://kit.fontawesome.com/ea89dbad1b.js" crossorigin="anonymous"></script>
 </body>
 
