--- a/details.html
+++ b/details.html
@@ -33,19 +33,7 @@
             <a href="#">></a>
         </div>
         <section class="section-details">
-            <div class="details-box">
-                <div class="img-details">
-                    <img src="assets/img/Food_Fair.jpg" alt="Imagen prueba">
-                </div>
-                <div class="description-details">
-                    <h2>Título</h2>
-                    <p><b>Precio</b></p>
-                    <p><b>Detalles</b></p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta voluptatem ad, facilis quod quibusdam expedita repellendus voluptatum beatae tenetur iure obcaecati illo ab perspiciatis aspernatur tempore totam ipsa quasi labore!
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident, reprehenderit beatae ullam ea perspiciatis molestiae veniam facere voluptate laudantium officiis debitis non atque repellendus assumenda sunt in voluptas 
-                    </p>
-                </div>
-            </div>
+
         </section>
         <footer>
             <div class="social">
@@ -61,7 +49,7 @@
     </main>
 
 
-    <script src="./assets/js/index.js"></script>
+    <script type="module" src="./assets/js/details.js"></script>
     <script src="https://kit.fontawesome.com/ea89dbad1b.js" crossorigin="anonymous"></script>
 </body>
 </html>
