--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 <body>
     <header>
         <img src="./assets/img/Logo Amazing Events.png" alt="Logo Amazing Events" class="logo-amazing">
+        <button class="menu-button"><span class="menu-icon"></span></button>
         <nav class="container-nav">
             <a href="index.html">Home</a>
             <a href="events.html">Upcoming Events</a>
